# mapnik-c-api

./: CMakeLists.txt
cmake/: .FindMapnik.cmake.swp  FindMapnik.cmake
test/: CMakeLists.txt  c-api-test-cfg.h.in  c-api-test.cpp
